# bookstore

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: details.md
src/: InstanceDaemon.h  StoreBranch.cpp  StoreBranch.h  ThreadPool.h  base.h  main.cpp
src/WebSocket/: WebSocket.cpp  WebSocket.h
src/book/: Book.cpp  Book.h
src/file/: DataBase.h  FileMap.h
src/finance/: Finance.cpp  Finance.h
src/lexer/: BookStoreLexer.cpp  BookStoreLexer.h
src/store/: StoreBranch.cpp  StoreBranch.h
src/user/: User.cpp  User.h
